# schema-harvester

./: .dockerignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yaml
.github/: renovate-global.json  renovate.json5
.github/workflows/: build.yaml  renovate.yaml  rust.yml  test.yaml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/examples/: validate.rs
core/src/: format.rs  generate.rs  hints.rs  lib.rs
core/src/merge/: mod.rs  string.rs
core/src/model/: any.rs  array.rs  date.rs  datetime.rs  integer.rs  mod.rs  node_type.rs  number.rs  schema.rs  string.rs
core/src/renderer/: any.rs  array.rs  json_schema_renderer.rs  mod.rs  node.rs  object.rs  schema.rs  string.rs
service/: Cargo.toml  config.default.toml  config.sample.toml
service/src/: generator.rs  kafka.rs  log.rs  main.rs  management.rs  settings.rs  utils.rs
test-suite/: Cargo.toml
test-suite/tests/: object_merging.rs
