[package]
name = "schema-harvester-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "Schema-Harvester is a tool that parses exsiting JSON documents and tries to derive a JSON schema from these documents."
repository = "https://github.com/elmarx/schema-harvester"
homepage = "https://github.com/elmarx/schema-harvester"
categories = ["command-line-utilities"]
authors = ["Elmar Athmer <elmar@athmer.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.139"
clap = { version = "4.5.31", features = ["derive"] }
schema-harvester = { version = "0.1.0", path = "../core" }

[[bin]]
name = "schema-harvester"
path = "src/main.rs"
