[package]
name = "schema-harvester"
version = "0.1.0"
rust-version = "1.85.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Schema-Harvester is a crate derive a JSON schema from given JSON objects"
repository = "https://github.com/elmarx/schema-harvester"
homepage = "https://github.com/elmarx/schema-harvester"
authors = ["Elmar Athmer <elmar@athmer.org>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
serde = { version = "1.0.219", features = ["derive"] }
uuid-simd = "0.8.0"

[dev-dependencies]
jsonschema = "0.37.0"
test-case = "3.3.1"
