[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
schema-harvester = { version = "0.1.0", path = "../core" }
config = { version = "0.15.7", default-features = false, features = ["toml", "convert-case"] }
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["full"] }
rdkafka = { version = "0.37.0", features = ["sasl", "ssl", "zstd"] }
hyper = "1.6.0"
hyper-util = { version = "0.1.10", features = ["server", "http1", "client", "client-legacy", "service", "tokio"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tower = { version = "0.5.2", features = ["util"] }
http = "1.2.0"
http-body-util = "0.1.2"
bytes = "1.10.0"
serde = "1.0.218"
serde_json = "1.0.139"
futures = "0.3.31"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[[bin]]
name = "harvesterd"
path = "src/main.rs"
